<resources>
    <string name="app_name">Movie Catalog</string>
    <string name="movies">Movies</string>
    <string name="tv_show">TV Show</string>
    <string name="detail_overview">Detail Overview</string>
    <string name="setting">Setting</string>
    <string name="share_app_to_your_friends">Share app to your friends</string>
    <string name="switch_for_change_theme_application">Switch for change theme application</string>
    <string name="title">Naruto Shippuden (2007)</string>
    <string name="genre">Genre</string>
    <string name="date">Februari 15, 2007</string>
    <string name="separator">|</string>
    <string name="rating">8.6</string>
    <string name="description">Description</string>
    <string name="content_description">Naruto Shippuuden adalah kelanjutan dari serial TV animasi asli Naruto. Kisah ini berkisah tentang Uzumaki Naruto yang lebih tua dan sedikit lebih matang dan upayanya untuk menyelamatkan temannya Uchiha Sasuke dari cengkeraman Shinobi seperti ular, Orochimaru. Setelah 2 setengah tahun, Naruto akhirnya kembali ke desanya Konoha, dan mulai mewujudkan ambisinya, meskip</string>
    <string name="movie_catalog">Movie Catalog</string>
    <string name="no_data_available_now">No data available now!</string>
    <string name="release_date">Release Date</string>
    <string name="popularity">Popularity</string>
    <string name="popularity_value">8817.063</string>
    <string name="image_poster_detail">Image Poster Detail</string>
    <string name="logo_app">Logo App</string>
    <string name="image_item_poster">Image Item Poster</string>
    <string name="icon_rating">Icon Rating</string>
    <string name="favorite">Favorite</string>
    <string name="fab_favorites">Fab Favorites</string>
    <string name="poster_image">Poster Image</string>
    <string name="filter">Filter</string>
    <string name="check_spinner">Check Spinner</string>

    <string-array name="filter_item">
        <item>Rating</item>
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>

</resources>